--- a/package.json
+++ b/package.json
@@ -13,13 +13,11 @@
     "babel-preset-stage-0": "^6.22.0",
     "babelify": "^7.3.0",
     "browserify": "^14.1.0",
-    "connect-livereload": "^0.5.3",
-    "convert-source-map": "^1.5.0",
     "cross-spawn": "^5.1.0",
     "dargs": "^4.0.1",
     "each-async": "^1.1.1",
-    "express": "^4.13.3",
     "glob": "^5.0.15",
+    "gulp": "^3.9.1",
     "gulp-autoprefixer": "^2.3.1",
     "gulp-babel": "^6.1.2",
     "gulp-browserify": "^0.5.1",
@@ -27,17 +25,16 @@
     "gulp-env": "^0.4.0",
     "gulp-express": "^0.3.5",
     "gulp-if": "^2.0.2",
+    "gulp-nodemon": "^2.4.2",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^3.0.0",
     "gulp-sourcemaps": "^2.4.1",
     "gulp-uglify": "^2.0.1",
     "gulp-util": "^3.0.6",
     "gulp-webserver": "^0.9.1",
-    "handlebars": "^4.0.6",
     "jquery": "^3.2.1",
     "lodash": "^4.17.11",
     "mkdirp": "^0.5.1",
-    "node-bourbon": "^4.2.3",
     "node-sass": "^4.9.3",
     "object-assign": "^3.0.0",
     "rimraf": "^2.4.2",
@@ -48,20 +45,16 @@
     "vinyl-source-stream": "^1.1.0"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "babel-register": "^6.26.0",
     "browserify": "^14.1.0",
     "del": "^3.0.0",
-    "event-stream": "^4.0.0",
-    "gulp": "^3.9.1",
     "gulp-concat": "^2.6.1",
-    "hammerjs": "^2.0.8",
-    "handlebars": "^4.0.6",
-    "jump.js": "^1.0.2",
-    "progressbar.js": "^1.0.1",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-owl-carousel2": "^0.3.0",
     "react-pose": "^3.3.7",
+    "react-router-dom": "^5.0.0",
     "react-transition-group": "^2.2.1",
     "redux": "^4.0.1",
     "vinyl-source-stream": "^1.1.0",
