--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "mkdirp": "^0.5.1",
     "node-sass": "^4.9.3",
     "object-assign": "^3.0.0",
+    "react-select": "^2.4.2",
     "rimraf": "^2.4.2",
     "slash": "^1.0.0",
     "tiny-lr": "^1.1.1",
@@ -55,6 +56,7 @@
     "react-pose": "^3.3.7",
     "react-redux": "^6.0.1",
     "react-router-dom": "^5.0.0",
+    "react-router-redux": "^4.0.8",
     "react-transition-group": "^2.2.1",
     "redux": "^4.0.1",
     "redux-form": "^8.1.0",
