--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "babel-preset-stage-0": "^6.22.0",
     "babelify": "^7.3.0",
     "browserify": "^14.1.0",
+    "browserify-css": "^0.14.0",
     "cross-spawn": "^5.1.0",
     "dargs": "^4.0.1",
     "each-async": "^1.1.1",
@@ -37,6 +38,7 @@
     "mkdirp": "^0.5.1",
     "node-sass": "^4.9.3",
     "object-assign": "^3.0.0",
+    "react-day-picker": "^7.3.0",
     "react-select": "^2.4.2",
     "rimraf": "^2.4.2",
     "slash": "^1.0.0",
@@ -47,9 +49,12 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "babel-plugin-react-css-modules": "^5.2.4",
     "babel-register": "^6.26.0",
     "del": "^3.0.0",
     "gulp-concat": "^2.6.1",
+    "gulp-less": "^4.0.1",
+    "node-uuid": "^1.4.8",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-owl-carousel2": "^0.3.0",
